--- a/first_test/index.html
+++ b/first_test/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-	<input id="input_src" Xdraw="src_img" type="file" accept="image/*" /><br/>
+	<input id="input_src" Xdraw="src_img" type="file" accept="image/*" />Srcouce File<br/>
 	<img id="src_img" src=""></img><br/>
 
 	<img id="res_img" src=""></img><br/>
 
-	<input id="input_ref" Xdraw="ref_img" type="file" accept="image/*" /><br/>
+	<input id="input_ref" Xdraw="ref_img" type="file" accept="image/*" />Referrence File<br/>
 	<img id="ref_img" src=""></img><br/>
 	
 	<button onclick="colorMatch()">button!</button>
@@ -28,6 +28,7 @@
 	input_ref.addEventListener('change', readFile, false);
 
 	function readFile(){
+		console.time('Read image and display');
 		var file = this.files[0];
 		if (!/image\/[a-zA-Z]+/.test(file.type)){
 			alert("Please upload a Image!");
@@ -38,6 +39,7 @@
 		var Xdraw = this.getAttribute('Xdraw'); 
 		reader.onload = function(e){
 			displayAsImage(this.result, Xdraw);
+		console.timeEnd('Read image and display');
 		}
 	}
 
@@ -48,7 +50,9 @@
 </script>
 <script type="text/javaScript" src="test.js"></script>
 <script>
+var mem = new WebAssembly.Memory({initial:1000, maximum:2000})
 function colorMatch(){
+	console.time('Pretreatment image data');
 	// get ImgElement
 	src_img_or = document.getElementById("src_img");
 	ref_img_or = document.getElementById("ref_img");
@@ -67,23 +71,35 @@ function colorMatch(){
 	src_ctx.drawImage(src_img, 0, 0);
 
 	ref_cv = document.createElement('canvas');
+	ref_cv.width = ref_img.width;
+	ref_cv.height = ref_img.height;
 	ref_ctx = ref_cv.getContext('2d');
 	ref_ctx.drawImage(ref_img, 0, 0);
-	
+
 	// send to wasm
-	data = src_ctx.getImageData(0, 0, src_img.width, src_img.height);
-	len = data.width*data.height*4;
-	buffer = new Uint8Array(Module.wasmMemory.buffer, 0, len);
-	buffer.set(data.data);
-	
+	data_src = src_ctx.getImageData(0, 0, src_img.width, src_img.height);
+	len_src = src_img.width * src_img.height * 4;
+	buffer_src = new Uint8Array(mem.buffer, 1024, len_src);
+	buffer_src.set(data_src.data);
+
+	data_ref = ref_ctx.getImageData(0, 0, ref_img.width, ref_img.height);
+	len_ref = ref_img.width * ref_img.height * 4;
+	buffer_ref = new Uint8Array(mem.buffer, 2048 + len_src, len_ref);
+	buffer_ref.set(data_ref.data);	
+	console.timeEnd('Pretreatment image data');
+	console.time('WASM');
 	// input data
-	_testWASM(buffer, len);
+	_histMatch(buffer_src, buffer_ref, len_src, len_ref);
+	console.timeEnd('WASM');
 	
+	console.time('Output image');
 	// output data
-	data.data.set(buffer);
-	src_ctx.putImageData(data, 0, 0);
+	data_src.data.set(buffer_src);
+	src_ctx.putImageData(data_src, 0, 0);
 	dataURL = src_cv.toDataURL('image/png');
+	
 	document.getElementById('res_img').src = dataURL;
+	console.timeEnd('Output image');
 }
 </script>
 
