--- a/first_test/index.html
+++ b/first_test/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 	<meta content="text/html" charset="UTF-8">
-	<script type="text/javaScript" src="test.js"></script>
+	<script type="text/javaScript" src="filter.js"></script>
 	<style>
 		img{
 			max-width: 720px;
