--- a/first_test/index.html
+++ b/first_test/index.html
@@ -19,12 +19,21 @@
 
 		.Lsize{
 			font-size: 1.5em;
+			color: blue;
 		}
 	</style>
 </head>
 
 <body>
 	<!-- Info -->
+	<h3>颜色匹配器 ver.0.0.1</h3>
+	<p>基本功能完成了……姑且<p>
+	<p><b>说明：</b><br/>
+	上传两张图片：源图(Source)和参照图(Referrence)，然后点最下面的Render按钮。<br/>
+	网页会根据参照图为源图上色，使源图拥有和参照图相同的色调。</p>
+	<p>最近对<a href="https://webassembly.org/" target="_blank">wasm</a>突然来了兴趣，写了个这个当入门练习……编译前的C代码看
+	<a href="https://github.com/shinpoi/wasm_test/blob/master/first_test/filter.c" target_"_blank">这里</a></p>
+	<HR>
 
 	<!-- Tools -->
 	<div class="Lsize">Source Image:　<input id="input_src" Xdraw="src_img" type="file" accept="image/*"></div><br/>
