--- a/first_test/index.html
+++ b/first_test/index.html
@@ -120,7 +120,7 @@ function colorMatch(){
 	
 	// Do histMatch
 	console.time('WASM');
-	_histMatch(p_src, p_ref, len_src, len_ref);
+	_hist_match(p_src, p_ref, len_src, len_ref);
 	console.timeEnd('WASM');
 	
 	// Output data
