--- a/c/cross_img/index.html
+++ b/c/cross_img/index.html
@@ -103,7 +103,6 @@
 	}
 
 	function union() {
-		let p = 0;
 		cv_union.height = cv_bk.height;
 		cv_union.width = cv_bk.width;
 		let ctx = cv_union.getContext("2d");
@@ -113,21 +112,23 @@
 		let imgData = ctx.getImageData(0, 0, cv_union.width, cv_union.height);
 		let data = imgData.data;
 
-		for (let i=0; i<data.length; i+=4) {
-			// black
-			if (p%2 == 0) {
-				data[i]   = 0;
-				data[i+1] = 0;
-				data[i+2] = 0;
-				data[i+3] = 255 - data_wh[i];
-			// white
-			} else {
-				data[i]   = 255;
-				data[i+1] = 255;
-				data[i+2] = 255;
-				data[i+3] = data_bk[i];
+		for (let i=0; i<cv_union.height; i++) {
+			for (let j=0; j<cv_union.width; j++) {
+				let p = (i * cv_union.width + j) * 4; 
+				// black
+				if ((i+j)%2 == 0) {
+					data[p]   = 0;
+					data[p+1] = 0;
+					data[p+2] = 0;
+					data[p+3] = 255 - data_bk[p];
+				// white
+				} else {
+					data[p]   = 255;
+					data[p+1] = 255;
+					data[p+2] = 255;
+					data[p+3] = data_wh[p];
+				}
 			}
-			p++;
 		}
 		ctx.putImageData(imgData, 0, 0);
 		cv_union.toBlob(function(blob) {
