--- a/c/cross_img/index.html
+++ b/c/cross_img/index.html
@@ -29,27 +29,42 @@
 		<li>点 "union"</li>
 		<li>生成图片后可以点几个 "to xxx" 看看效果</li>
 		<li>点 "Download Result" 下载结果</li>
-		<li>发图时记得钩上"原图"，微信无效不用试了，对PC端貌似也无效</li>
+		<li>QQ上发图时记得钩上"原图"，微信无效不用试了。</li>
 	</ol>
-	<p>P.S. 生成图的尺寸以表图为准，自动调节和缩放啥的暂时没做……理由……懒</p>
+	<p>P.S. 生成图的尺寸以表图为准，在线裁剪尺寸啥的暂时没做……因为懒</p>
 	<HR>
 	<!-- Tools -->
 	<div class="Lsize">Front Image (black):　<input id="input_bk" Xdraw="cv_bk" type="file" accept="image/*"></div><br/>
-	<canvas id="cv_bk" width="100" height="100"></canvas><br/>
+	<canvas id="cv_bk" width="100" height="100"><br/></canvas><span id="info_bk"></span><br/>
 	<div class="Lsize">Back  Image (white):　<input id="input_wh" Xdraw="cv_wh" type="file" accept="image/*" /></div><br/>
-	<canvas id="cv_wh" width="100" height="100"></canvas><br/>
+	<canvas id="cv_wh" width="100" height="100"><br/></canvas><span id="info_wh"></span><br/>
 	<HR>
 	<canvas id="cv_union" width="100" height="100"></canvas><br/>
 	<HR>
-	<button onclick='union()'>　Union　</button>
+	<button onclick='union(0)'>　Union　</button>
 	<button onclick='setUnionColor("#ffffff")'> to Front </button>
 	<button onclick='setUnionColor("#000000")'> to Back </button>
 	<button onclick='setUnionColor("#888888")'> to Gray </button><br/>
 	<a id="dl"><button type="button"> Download Result </button></a><br/>
 
+	<HR>
+	<h3>进阶（测试功能）：</h3>
+	<p>平滑重叠两张图而非镶嵌重叠。注意表图比里图亮的地方在数学上是没法完美重叠的，<br/>
+		推荐用较亮的图做表图，用较暗的图做里图。并且两张图的主体部分尽量错开。<br/>
+		或者看说明调节下面的滑块到一个理想的位置。<br/>
+		(原理参照函数"smoothUnion()")
+	</p>
+	<button onclick='union(1)'>　Union (smooth)　</button>
+	front priority (0~1): <input id="bar_priority" type="range" min=0 max=100 value=80>
+	| value: <input type="number" step=0.01 value=0.8 min=0 max=1 id="input_priority"> &lt--表里图无法完美重叠时，表图的权重。这个值越高越优先保证表图的效果。<br/>
+
 <script type="text/javaScript">
 	var input_bk = document.getElementById("input_bk");
 	var input_wh = document.getElementById("input_wh");
+	var info_bk = document.getElementById("info_bk");
+	var info_wh = document.getElementById("info_wh");
+	var bar_priority = document.getElementById("bar_priority");
+	var input_priority = document.getElementById("input_priority");
 
 	var cv_union = document.getElementById("cv_union");
 	var cv_bk = document.getElementById("cv_bk");
@@ -58,8 +73,19 @@
 	var img_map = {"cv_bk": new Image, "cv_wh": new Image};
 	var cv_map = {"cv_bk": cv_bk, "cv_wh": cv_wh};
 
-	input_bk.addEventListener('change', readImg, false);
-	input_wh.addEventListener('change', readImg, false);
+	input_bk.addEventListener('input', readImg, false);
+	input_wh.addEventListener('input', readImg, false);
+	bar_priority.addEventListener('input', barChange, false);
+	input_priority.addEventListener('input', inputChange, false);
+
+	function barChange() {
+		let v = document.getElementById("input_" + this.id.replace("bar_", ""));
+		v.value = this.value/100.0;
+	}
+	function inputChange() {
+		let v = document.getElementById("bar_" + this.id.replace("input_", ""));
+		v.value = this.value*100.0;
+	}
 
 	function readImg(){
 		let file = this.files[0];
@@ -83,6 +109,11 @@
 		img.onload = function(e) {
 			cv.height = img.height;
 			cv.width = img.width;
+			if (id_.includes("bk")) {
+				info_bk.innerText = "size: " + cv.width + " x " + cv.height;
+			} else if (id_.includes("wh")) {
+				info_wh.innerText = "size: " + cv.width + " x " + cv.height;
+			} 
 			let ctx = cv.getContext("2d");
 			ctx.drawImage(img, 0, 0);
 			cv2gray(cv);
@@ -102,21 +133,36 @@
 		ctx.putImageData(imgData, 0, 0);
 	}
 
-	function union() {
+	function union(method) {
 		cv_union.height = cv_bk.height;
 		cv_union.width = cv_bk.width;
-		let ctx = cv_union.getContext("2d");
 		let data_bk = cv_bk.getContext("2d").getImageData(0, 0, cv_union.width, cv_union.height).data;
 		let data_wh = cv_wh.getContext("2d").getImageData(0, 0, cv_union.width, cv_union.height).data;
 
+		let ctx = cv_union.getContext("2d");
 		let imgData = ctx.getImageData(0, 0, cv_union.width, cv_union.height);
 		let data = imgData.data;
+		if (method === 0) {
+			crossUnion(data, data_bk, data_wh);
+		} else {
+			smoothUnion(data, data_bk, data_wh);
+		}
 
+		ctx.putImageData(imgData, 0, 0);
+		cv_union.toBlob(function(blob) {
+			let a = document.getElementById('dl');
+			a.href = URL.createObjectURL(blob);
+			console.log(a.href);
+			a.download = "result.png"
+		}, "image/png")
+	}
+
+	function crossUnion(data, data_bk, data_wh) {
 		for (let i=0; i<cv_union.height; i++) {
 			for (let j=0; j<cv_union.width; j++) {
 				let p = (i * cv_union.width + j) * 4; 
 				// black
-				if ((i+j)%2 == 0) {
+				if ((i+j)%2 === 0) {
 					data[p]   = 0;
 					data[p+1] = 0;
 					data[p+2] = 0;
@@ -130,13 +176,46 @@
 				}
 			}
 		}
-		ctx.putImageData(imgData, 0, 0);
-		cv_union.toBlob(function(blob) {
-			let a = document.getElementById('dl');
-			a.href = URL.createObjectURL(blob);
-			console.log(a.href);
-			a.download = "result.png"
-		}, "image/png")
+	}
+
+	/*
+	konwn:  bk, wh (target brightness, 0~255)
+	need:   bright(0~255), alpha(0~1)
+	+-------------------------------------+
+	| bright * alpha + (1-alpha)*255 = bk |
+	| bright * alpha + (1-alpha)*0   = wh |
+	+-------------------------------------+
+	--> (1 - alpha)*255 = bk - wh
+	1. bk > wh --> alpha > 0  -->  alpha = 1 - (bk - wh)/255  &  bright = wh/alpha
+	2. bk < wh --> alpha < 0  -->  invalid
+	*/
+	function smoothUnion(data, data_bk, data_wh) {
+		let magic_num = document.getElementById("input_priority").value;
+		for (let i=0; i<cv_union.height; i++) {
+			for (let j=0; j<cv_union.width; j++) {
+				let p = (i * cv_union.width + j) * 4; 
+				let diff = data_bk[p] - data_wh[p];
+				// bk >= wh 
+				if (diff >= 0) {
+					let alpha = 255 - diff;
+					let bright = 255*data_wh[p]/alpha;
+					data[p]   = bright;
+					data[p+1] = bright;
+					data[p+2] = bright;
+					data[p+3] = alpha;
+				// bk < wh 
+				} else {
+					let bright = data_bk[p]*magic_num + data_wh[p]*(1-magic_num);
+					data[p]   = bright;
+					data[p+1] = bright;
+					data[p+2] = bright;
+					data[p+3] = 255;
+				}
+			}
+		}
+		// make QQandroid happy
+		data[0] = data[1] = data[2] = 0;
+		data[3] = 255 - data_bk[0];
 	}
 
 	function setUnionColor(color) {
